<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:id="@+id/dialog_anonymous_exam"
    android:background="@android:color/background_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/gs_anonymous_exam_add_exam_id"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_id"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/gs_anonymous_exam_add_access_code"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:hint="@string/accessCode"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <Button
        android:id="@+id/gs_anonymous_exam_btn_find"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/find_new_exam"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_anon_exam_error_msg"
        android:textSize="12sp"
        android:textColor="@color/colorError"
        />

    </LinearLayout>
</LinearLayout>