...
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/gs_login_btn_anonymous_exam"
                    style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:paddingLeft="6dp"
...
